added view services addon. Started standard part of address space.

--- a/ua/server/Makefile.am
+++ b/ua/server/Makefile.am
@@ -138,6 +138,15 @@ libendpoints_services_addon_la_SOURCES = \
 libendpoints_services_addon_la_CPPFLAGS = $(INCLUDES)
 libendpoints_services_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) -no-undefined
 
+lib_LTLIBRARIES += libview_services_addon.la
+addonsinclude_HEADERS += \
+  include/opc/ua/server/addons/view_services.h
+libview_services_addon_la_SOURCES = \
+  src/server/standard_namespace.cpp \
+  src/server/view_services_addon.cpp
+libview_services_addon_la_CPPFLAGS = $(INCLUDES)
+libview_services_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) -no-undefined
+
 
 endif
 
