--- a/ua/libuamappings/Makefile.in
+++ b/ua/libuamappings/Makefile.in
@@ -117,7 +117,8 @@ am_opc_ua_binary_test_OBJECTS =  \
 	opc_ua_binary_test-binary_serialize_variant.$(OBJEXT) \
 	opc_ua_binary_test-binary_serialize_view.$(OBJEXT) \
 	opc_ua_binary_test-binary_serialize.$(OBJEXT) \
-	opc_ua_binary_test-message_id.$(OBJEXT)
+	opc_ua_binary_test-message_id.$(OBJEXT) \
+	opc_ua_binary_test-reference_id.$(OBJEXT)
 opc_ua_binary_test_OBJECTS = $(am_opc_ua_binary_test_OBJECTS)
 opc_ua_binary_test_DEPENDENCIES = libopcuabinary.a
 opc_ua_binary_test_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
@@ -341,7 +342,8 @@ opc_ua_binary_test_SOURCES = \
  tests/binary_serialize_view.cpp \
  tests/binary_serialize.cpp \
  tests/common.h \
- tests/message_id.cpp
+ tests/message_id.cpp \
+ tests/reference_id.cpp
 
 opc_ua_binary_test_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include $(GTEST_INCLUDES) $(GMOCK_INCLUDES)
 opc_ua_binary_test_LDADD = libopcuabinary.a
@@ -472,6 +474,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opc_ua_binary_test-binary_serialize_variant.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opc_ua_binary_test-binary_serialize_view.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opc_ua_binary_test-message_id.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opc_ua_binary_test-reference_id.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -759,6 +762,20 @@ opc_ua_binary_test-message_id.obj: tests/message_id.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/message_id.cpp' object='opc_ua_binary_test-message_id.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opc_ua_binary_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opc_ua_binary_test-message_id.obj `if test -f 'tests/message_id.cpp'; then $(CYGPATH_W) 'tests/message_id.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/message_id.cpp'; fi`
+
+opc_ua_binary_test-reference_id.o: tests/reference_id.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opc_ua_binary_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opc_ua_binary_test-reference_id.o -MD -MP -MF $(DEPDIR)/opc_ua_binary_test-reference_id.Tpo -c -o opc_ua_binary_test-reference_id.o `test -f 'tests/reference_id.cpp' || echo '$(srcdir)/'`tests/reference_id.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opc_ua_binary_test-reference_id.Tpo $(DEPDIR)/opc_ua_binary_test-reference_id.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/reference_id.cpp' object='opc_ua_binary_test-reference_id.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opc_ua_binary_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opc_ua_binary_test-reference_id.o `test -f 'tests/reference_id.cpp' || echo '$(srcdir)/'`tests/reference_id.cpp
+
+opc_ua_binary_test-reference_id.obj: tests/reference_id.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opc_ua_binary_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opc_ua_binary_test-reference_id.obj -MD -MP -MF $(DEPDIR)/opc_ua_binary_test-reference_id.Tpo -c -o opc_ua_binary_test-reference_id.obj `if test -f 'tests/reference_id.cpp'; then $(CYGPATH_W) 'tests/reference_id.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/reference_id.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opc_ua_binary_test-reference_id.Tpo $(DEPDIR)/opc_ua_binary_test-reference_id.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/reference_id.cpp' object='opc_ua_binary_test-reference_id.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opc_ua_binary_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opc_ua_binary_test-reference_id.obj `if test -f 'tests/reference_id.cpp'; then $(CYGPATH_W) 'tests/reference_id.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/reference_id.cpp'; fi`
 
 mostlyclean-libtool:
 	-rm -f *.lo
