Compiles standard address space class

--- a/ua/libuamappings/Makefile.in
+++ b/ua/libuamappings/Makefile.in
@@ -311,11 +311,14 @@ opcuainclude_HEADERS = \
   include/opc/ua/protocol/session.h \
   include/opc/ua/protocol/data_value.h \
   include/opc/ua/extension_identifiers.h \
-  include/opc/ua/channel.h \
-  include/opc/ua/object_ids.h \
-  include/opc/ua/interface.h \
   include/opc/ua/attribute_ids.h \
-  include/opc/ua/message_identifiers.h
+  include/opc/ua/channel.h \
+  include/opc/ua/interface.h \
+  include/opc/ua/message_identifiers.h \
+  include/opc/ua/node_classes.h \
+  include/opc/ua/object_ids.h \
+  include/opc/ua/reference_ids.h \
+  include/opc/ua/strings.h
 
 lib_LIBRARIES = libopcuabinary.a
 libopcuabinary_a_SOURCES = \
